[package]
name = "liberty-parse"
description = "Liberty file format parser"
version = "0.4.2"
authors = ["Erik Ronshagen <eronshagen@gmail.com>"]
edition = "2021"
repository = "https://github.com/shages/liberty-parse"
readme = "README.md"
license = "MIT"

[badges]
azure-devops = { project = "eronshagen/shages", pipeline = "shages.liberty-parse" }

[dependencies]
nom = "7.1"
itertools = "0.10"
float-pretty-print = "0.1"
indexmap = "1.9"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
